--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <div id="app"></div>
+    <script>
+      // Acquire VS Code API
+      const vscode = acquireVsCodeApi();
+      window.vscode = vscode;
+    </script>
     <script type="module" src="/src/webview/main.ts"></script>
   </body>
 </html>
